# fing

./: README.md  definitions.md  pyproject.toml  record-fingering-simple.toml  record-fingering.toml  recorder-fingering.toml  sax-fingering.layout.toml  sax-fingering.toml  sax-names.txt
fing/: __main__.py  chart_piece.py  error_maker.py  fingering_system.py  fix_input_variables.py  fix_text_indenting.py  layout.py  note.py  note_conversion.py  read_fingerings.py  render.py  render_chart.py  renderer.py  sizes.py  xml_to_str.py
fingerings/: recorder-fingering.layout.toml  recorder-fingering.toml
fingerings/recorder/: recorder-fingering.colors.toml  recorder-fingering.layout.toml  recorder-fingering.toml
fingerings/sax/: README.md
fingerings/wx7/: README.md  wx7-fingering.toml
scripts/: test_svg.py
test/: clean_json.py  constants.py  sizes.json  test_fingerings.py  test_fix_text_indenting.py  test_read_fingering.py  test_read_layout.py  test_rendering.py  test_sizes.py
writing/: old-README.md  sax-names.txt  sax-rev.toml
