[project]
name = "fing"
version = "0.1.0"
description = "ðŸ–ï¸ A universal representation of fingering systems for winds, reeds, and brass ðŸ–ï¸"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "svg-py>=1.10.0",
    "tomlkit>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fing = "fing.__main__:main"

[tool.ruff.format]
quote-style = "single"

[tool.uv]
package = true
